--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="utf-8">
-    <title>Page title</title>
-    <link rel="stylesheet" href="css/style.scss">
-  </head>
-  <body>
-    <ul id="list">
-        <li>item 0</li>
-    </ul>
-    <button id="addElem">
-        Dodaj
-    </button>
-    <script type="text/javascript" src="js/scripts.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>jQuery</title>
+		<link rel="stylesheet" type="text/css" href="css/style.scss">
+	</head>
+	<body>
+		<div>
+			<div>
+				<p><span>span 1</span></p>
+			</div>
+			<div>
+				<p>1</p>
+			</div>
+			<div>
+				<p><span>span 1</span></p>
+			</div>
+			<div>
+				<p>1</p>
+			</div>	
+			<div>
+				<p><span>span 1</span></p>
+			</div>
+			<div>
+				<p>1</p>
+			</div>	
+			<div>
+				<p><span>span 1</span></p>
+			</div>
+			<div>
+				<p>1</p>
+			</div>
+			<div>
+				<p><span>span 1</span></p>
+			</div>
+			<div>
+				<p>1</p>
+			</div>								
+		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
+	</body>
 </html>
